k8s/product-catalog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  namespace: product-catalog
  labels:
    app: product-catalog
spec:
  type: ClusterIP
  selector:
    app: product-catalog
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
